--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
     <link type="image/png" sizes="16x16" rel="icon" href="./icons8-favicon-24.png">
 </head>
-<body class="flex-col w-[100%] h-[100%] px-10 items-center">
+<body class="flex-col w-[100%] h-[100%] px-10 items-center bg-[#F3F3E0]">
     <p id="todolist" class="text-center mt-7 text-[60px]">To Do List</p>
     <div class="flex justify-center my-4">
         <button data-modal-target="default-modal" data-modal-toggle="default-modal" class="w-100 text-[#14A44D] bg-white hover:bg-[#14A44D] hover:text-white border border-2 text-[20px] border-[#14A44D] focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer" type="button">
@@ -222,19 +222,19 @@
     <div class="flex justify-center mb-10">
         <div class="flex flex-col md:flex-row md:w-4/5 md:flex-wrap items-center">
             <!-- Must Do -->
-            <div id="mustDo" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#eeeeee] rounded h-[440px] overflow-scroll">
+            <div id="mustDo" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#CBDCEB] rounded h-[440px] overflow-scroll">
                 <p class="text-[25px]">Must Do</p>
             </div>
             <!-- Should Do -->
-            <div id="shouldDo" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#eeeeee] rounded h-[440px] overflow-scroll">
+            <div id="shouldDo" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#CBDCEB] rounded h-[440px] overflow-scroll">
                 <p class="text-[25px]">Should Do</p>
             </div>
             <!-- Could Do -->
-            <div id="couldDo" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#eeeeee] rounded h-[440px] overflow-scroll">
+            <div id="couldDo" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#CBDCEB] rounded h-[440px] overflow-scroll">
                 <p class="text-[25px]">Could Do</p>
             </div>
             <!-- If I Have Time -->
-            <div id="ifIHaveTime" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#eeeeee] rounded h-[440px] overflow-scroll">
+            <div id="ifIHaveTime" class="flex flex-col md:w-[calc(50%-20px)] md:mx-[10px] p-3 text-center priority shadow-xl hover:shadow-xl transition duration-150 w-[320px] mt-10 bg-[#CBDCEB] rounded h-[440px] overflow-scroll">
                 <p class="text-[25px]">If I Have Time</p>
             </div>
         </div>
@@ -352,14 +352,13 @@
         </svg>
     </div>
     <div id="readyToStart" class="hidden">
-        <div class="card flex mb-3 flex-wrap inset-shadow-sm bg-[#fff] p-3">
+        <div class="card flex mb-3 flex-wrap inset-shadow-sm bg-[#fff] p-3 mx-7">
             <div id="title" class="w-2/3 my-2 text-start self-center">task title</div>
-            <!-- در بخش readyToStart template -->
             <button class="start-btn w-1/3 bg-transparent my-2 hover:bg-[#14A44D] text-[#14A44D] font-semibold hover:text-white py-2 px-4 border border-[#14A44D] hover:border-transparent rounded">Start!</button>            
             <div id="expiryDate" class="w-1/2 text-start my-2">expire date</div>
             <div id="difficulty" class="w-1/2 my-2 ps-1" dir="rtl">
             </div>
-            <div class="w-1/3 my-2 text-start">more details</div>
+            <div class="w-1/3 my-2 text-start details-btn cursor-pointer text-[#14A44D] hover:underline hover:text-[#108d3f]">More Details</div>
             <div class="w-2/3 my-2 text-end">
                 <button class="bg-transparent hover:[#E4A11B] text-[#E4A11B] font-semibold hover:text-white hover:bg-[#E4A11B] py-2 px-4 border border-[#E4A11B] hover:border-transparent rounded ed">Edit</button>                
                 <button class="bg-transparent hover:bg-[#DC4C64] text-[#DC4C64] font-semibold hover:text-white py-2 px-4 border border-[#DC4C64] hover:border-transparent rounded del">Delete</button>
@@ -367,7 +366,7 @@
         </div>
     </div>
     <div id="inProgress" class="hidden">
-        <div class="card flex flex-wrap inset-shadow-sm bg-[#fff] p-3 mb-3">
+        <div class="card flex flex-wrap inset-shadow-sm bg-[#fff] p-3 mb-3 mx-7">
             <div id="title" class="w-1/3 self-center text-start">task title</div>
             <div class="w-2/3 text-end">
                 <button id="" class="finished bg-transparent my-2 hover:bg-[#14A44D] text-[#14A44D] cursor-pointer font-semibold hover:text-white py-2 px-4 border border-[#14A44D] hover:border-transparent rounded">Finished?</button>
@@ -377,7 +376,7 @@
             </div>
             <div class="w-1/2 my-2 ps-1" id="difficulty" dir="rtl">
             </div>
-            <div class="w-1/3 my-2 text-start">more details</div>
+            <div class="w-1/3 my-2 text-start details-btn cursor-pointer text-[#14A44D] hover:underline hover:text-[#108d3f]">More Details</div>
             <div class="w-2/3 my-2 text-end">
                 <button class="bg-transparent hover:[#E4A11B] text-[#E4A11B] font-semibold hover:text-white hover:bg-[#E4A11B] py-2 px-4 border border-[#E4A11B] hover:border-transparent rounded ed">Edit</button>
                 <button class="bg-transparent hover:bg-[#DC4C64] text-[#DC4C64] font-semibold hover:text-white py-2 px-4 border border-[#DC4C64] hover:border-transparent rounded del">Delete</button>
@@ -385,7 +384,7 @@
         </div>
     </div>
      <div id="finished" class="hidden">
-        <div class="card flex mb-3 flex-wrap inset-shadow-sm bg-[#fff] p-3">
+        <div class="card flex mb-3 flex-wrap inset-shadow-sm bg-[#fff] p-3 mx-7">
             <div id="title" class="w-2/3 mb-2 text-start">task title</div>
             <div class="w-1/3 mb-2 text-end pe-1">finished</div>
                 <p id="details" class="w-3/5 h-[100px] overflow-scroll bg-gray-200 py-2">
@@ -397,7 +396,7 @@
         <div id="expiryDate" class="hidden"></div>
     </div>
     <div id="expired" class="hidden">
-        <div class=" card flex mb-3 flex-wrap inset-shadow-sm bg-[#fff] p-3">
+        <div class=" card flex mb-3 flex-wrap inset-shadow-sm bg-[#fff] p-3 mx-7">
             <div id="title" class="w-2/3 mb-2 text-start">task title</div>
             <div class="w-1/3 mb-2 text-end pe-1">expierd</div>
             <p id="details" class="w-3/5 h-[100px] overflow-scroll bg-gray-200 py-2">
@@ -410,6 +409,31 @@
                 <button class="remhis w-2/3 self-center mt-5 bg-transparent hover:bg-[#DC4C64] text-[#DC4C64] font-semibold hover:text-white py-2 px-4 border border-[#DC4C64] hover:border-transparent rounded del">remove</button>
             </div>
             <div id="difficulty" class="hidden"></div>
+        </div>
+    </div>
+
+    <div id="details-modal" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+        <div class="relative p-4 w-full max-w-2xl max-h-full">
+            <div class="relative bg-gray-300 rounded-lg shadow">
+                <div class="p-4 md:p-5 space-y-4">
+                    <h3 class="text-xl font-semibold" id="modal-task-title"></h3>
+                    <div class="flex justify-between">
+                        <p><strong>Priority:</strong> <span id="modal-task-priority"></span></p>
+                        <p><strong>Status:</strong> <span id="modal-task-status"></span></p>
+                    </div>
+                    <div class="flex justify-between">
+                        <p><strong>Difficulty:</strong> <span id="modal-task-difficulty"></span></p>
+                        <p><strong>Expiry Date:</strong> <span id="modal-task-expiry"></span></p>
+                    </div>
+                    <div class="bg-gray-200 p-3 rounded">
+                        <p class="font-medium">Details:</p>
+                        <p id="modal-task-details" class="mt-2"></p>
+                    </div>
+                    <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b">
+                        <button data-modal-hide="details-modal" type="button" class="text-white bg-[#14A44D] hover:bg-green-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
